--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                     <div class="f-user-img">
                         <img src="./img/face2.jpg" alt="">
                         <div class="user-bio">
-                            <h4>Amanda Swon</h4>
+                            <h4>Jason Doe</h4>
                             <span>User</span>
                         </div>
                     </div>
@@ -245,7 +245,7 @@
                     <div class="f-user-img">
                         <img src="./img/face3.jpg" alt="">
                         <div class="user-bio">
-                            <h4>Jane Olsen</h4>
+                            <h4>Jason Doe</h4>
                             <span>User</span>
                         </div>
                     </div>
@@ -265,7 +265,7 @@
                         <form action="#">
                             <input type="email" placeholder="Emial-Address" class="default-input w100">
                             <input type="text" placeholder="Name" class="default-input w50 left">
-                            <input type="number" placeholder="Your Phone" class="default-input w50 right">
+                            <input type="tel" placeholder="Phone" class="default-input w50 right">
                             <textarea class="default-input w100 " placeholder="Message"></textarea>
                             <button type="submit" class="submit-btn">Send</button>
                         </form>
